added descriptions for projects

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,12 @@
       <div class="text-box-container-2" style="width: 25%; height: 113%; margin: 0;">
         <div class="text-box" id="project-info" style="width: 100%; height: 70%; margin-top: 2vh; margin-left: 2vh;">
           <h2>CareBrew</h2>
-          <p style="margin-top: 2vh">CareBrew is...</p>
+          <p style="margin-top: 2vh">CareBrew is a web-based training module 
+            that enhances empathetic conflict resolution skills for coffee shop 
+            customer service professionals. It uses natural language processing 
+            to analyze user responses, deliver personalized feedback, and 
+            improve emotional intelligence through dynamic, scenario-based 
+            training.</p>
         </div>
 
         <div class="text-box" id="project-keywords" style="width: 100%; height: 30%; margin-top: 2vh; margin-left: 2vh;">
@@ -91,11 +96,19 @@
         case 'CareBrew':
           projectContent = `
             <h2>CareBrew</h2>
-            <p style="margin-top: 2vh;">CareBrew is...</p>
+            <p style="margin-top: 2vh;">CareBrew is a web-based training module 
+            that promotes empathetic conflict resolution skills in coffee shop 
+            customer service professionals. It is a multi-agent system that
+            uses natural language processing to generate training scenarios,
+            analyze user responses, deliver personalized feedback, and 
+            improve emotional intelligence through dynamic, context-based 
+            training. CareBrew aims to address the gap in customer service 
+            training by providing actionable, industry-specific empathy education.</p>
           `;
           keywordsContent = `
             <h2>Keywords</h2>
-            <p style="margin-top: 2vh;">CareBrew</p>
+            <p style="margin-top: 2vh;">Natural Language Processing (NLP),
+               Web Development, Python, HTML/CSS, JavaScript, Flask</p>
           `;
           demoElement = `
             <video width="100%" height="auto" controls style="margin-top: 2vh;">
@@ -107,11 +120,19 @@
         case 'Real-Time Conversation Assistant':
           projectContent = `
             <h2>Real-Time Conversation Assistant</h2>
-            <p style="margin-top: 2vh;">The Real-Time Conversation Assistant is...</p>
+            <p style="margin-top: 2vh;">The Real-Time Conversation Assistant is 
+              an Android application that aims to enhance reflective listening 
+              skills, a communication technique where the listener 
+              paraphrases the speaker to confirm understanding. 
+              It features two modes: Real-Time Assistant Mode, which provides 
+              the user with reflective statements during live conversations, and 
+              Practice Mode, which offers practice scenarios and feedback.</p>
           `;
           keywordsContent = `
             <h2>Keywords</h2>
-            <p style="margin-top: 2vh;">Real-Time, Conversation, Assistant</p>
+            <p style="margin-top: 2vh;">Natural Language Processing (NLP), 
+              Speech Diarization, Audio Processing, Android Development, Kotlin
+              </p>
           `;
           demoElement = `
             <img src="static/fineprint_1.png" alt="Conversation Assistant Demo 1" style="width: 100%; height: auto; margin-top: 2vh;">
@@ -121,11 +142,19 @@
         case 'FinePrint':
           projectContent = `
             <h2>FinePrint</h2>
-            <p style="margin-top: 2vh;">FinePrint is...</p>
+            <p style="margin-top: 2vh;">FinePrint is a cloud-based web application
+              designed to simplify legal document analysis by using Natural 
+              Language Processing (NLP) to summarize, parse, and extract 
+              key information. It features a secure, user-friendly interface that 
+              integrates serverless computing, cloud storage, generative AI models, 
+              and scalable infrastructure. FinePrint aim to improve the accessibility 
+              of legal document analysis while reducing the risk of exploitation.</p>
           `;
           keywordsContent = `
             <h2>Keywords</h2>
-            <p style="margin-top: 2vh;">JC Jump, Printing, Optimization</p>
+            <p style="margin-top: 2vh;">Cloud Computing, Natural Language Processing (NLP), 
+              AWS (Amplify, S3, IAM),
+              Web Development, JavaScript, React</p>
           `;
           demoElement = `
             <img src="static/fineprint_1.png" alt="FinePrint Demo 1" style="width: 100%; height: auto; margin-top: 2vh;">
@@ -135,11 +164,17 @@
         case 'JC Jump':
           projectContent = `
             <h2>JC Jump</h2>
-            <p style="margin-top: 2vh;">JC Jump is...</p>
+            <p style="margin-top: 2vh;">JC Jump is a survival-based vertical scrolling 
+              platformer typing game developed in C where players control a frog and type to 
+              jump levels. It features multiple difficulty settings and takes keyboard 
+              input, integrating switches and a seven-segment display for interaction and 
+              feedback. The game runs on the CPULator simulator, which emulates the ARMv7 
+              architecture and allows for execution within a modern web browser.</p>
           `;
           keywordsContent = `
             <h2>Keywords</h2>
-            <p style="margin-top: 2vh;">JC Jump, Gaming, Platformer</p>
+            <p style="margin-top: 2vh;">Game Development, Graphic Design, ARM architecture,
+               C, Assembly</p>
           `;
           demoElement = `
             <video width="100%" height="auto" controls style="margin-top: 2vh;">
