add and integrate demo assets in projects tab

--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
           `;
           demoElement = `
             <video width="100%" height="auto" controls style="margin-top: 2vh;">
-              <source src="static/carebrew.mp4" type="video/mp4">
+              <source src="static/carebrew-demo.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           `;
@@ -135,8 +135,7 @@
               </p>
           `;
           demoElement = `
-            <img src="static/fineprint_1.png" alt="Conversation Assistant Demo 1" style="width: 100%; height: auto; margin-top: 2vh;">
-            <img src="static/fineprint_2.png" alt="Conversation Assistant Demo 2" style="width: 100%; height: auto; margin-top: 2vh;">
+            <img src="static/rta-demo.png" alt="Conversation Assistant Demo 1" style="width: 100%; height: auto; margin-top: 2vh; border-radius: 1vh;">
           `;
           break;
         case 'FinePrint':
@@ -157,8 +156,10 @@
               Web Development, JavaScript, React</p>
           `;
           demoElement = `
-            <img src="static/fineprint_1.png" alt="FinePrint Demo 1" style="width: 100%; height: auto; margin-top: 2vh;">
-            <img src="static/fineprint_2.png" alt="FinePrint Demo 2" style="width: 100%; height: auto; margin-top: 2vh;">
+            <video width="100%" height="auto" controls style="margin-top: 2vh;">
+              <source src="static/fineprint-demo.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           `;
           break;
         case 'JC Jump':
@@ -178,7 +179,7 @@
           `;
           demoElement = `
             <video width="100%" height="auto" controls style="margin-top: 2vh;">
-              <source src="static/jc jump.mp4" type="video/mp4">
+              <source src="static/jc-jump-demo.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           `;
