add real-time conversation assistant demo description

--- a/projects.html
+++ b/projects.html
@@ -134,10 +134,10 @@
             <p style="margin-top: 2vh;">The Real-Time Conversation Assistant is 
               an Android application that aims to enhance reflective listening 
               skills, a communication technique where the listener 
-              paraphrases the speaker to confirm understanding. 
-              It features two modes: Real-Time Assistant Mode, which provides 
-              the user with reflective statements during live conversations, and 
-              Practice Mode, which offers practice scenarios and feedback.</p>
+              focuses on understanding their conversation partner's messsage and
+              paraphrases their message back to them. The goal of reflective listening
+              is for the conversation partner to feel heard and understood
+              and allow for further expansion of their thoughts.</p>
           `;
           keywordsContent = `
             <h2>Keywords</h2>
@@ -148,7 +148,14 @@
           demoElement = `
             <img src="static/rta-demo.png" alt="Conversation Assistant Demo 1" style="width: 100%; height: auto;">
           `;
-          demoDesc = 'This is a demo description for the Real-Time Conversation Assistant.';
+          demoDesc = `The application has two modes to support reflective communication.
+          <br><br>
+          In <b>Real-Time Assistant Mode</b>, the app is active during live conversations, generating reflective 
+          statements to the user based on the conversation context. It then presents this statement to the 
+          user through text-to-speech.
+          <br><br>
+          In <b>Practice Mode</b>, the app presents scenarios to the user for reflection, evaluates the user's responses, 
+          and offers feedback to improve their reflective listening skills.`;
           break;
         case 'FinePrint':
           projectContent = `
