added fineprint and jc jump demo descs

--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,14 @@
               Your browser does not support the video tag.
             </video>
           `;
-          demoDesc = 'This is a demo description for FinePrint.';
+          demoDesc = `FinePrint simplifies the processing of complex legal documents 
+          with cloud-based AI technology. Users log into the secure web application 
+          and upload their legal documents. The system then extracts text from the 
+          documents and processes it using a custom prompted AI models to generate 
+          summaries and highlight key details. The results are then displayed and 
+          saved to the interface for easy access.  With scalable cloud infrastructure, 
+          FinePrint ensures fast performance and robust security to protect sensitive 
+          legal data.`;
           break;
         case 'JC Jump':
           projectContent = `
@@ -203,7 +210,12 @@
               Your browser does not support the video tag.
             </video>
           `;
-          demoDesc = 'This is a demo description for JC Jump.';
+          demoDesc = `JC Jump begins with a loading screen where the user can view 
+          instructions or choose between easy, medium, or hard difficulty levels. 
+          Words appear on the screen, and the user must type them correctly to make 
+          the frog jump onto the next platform. If a word is typed incorrectly, the 
+          user loses a life. If all three lives are lost or if the frog falls off 
+          the screen, the game ends.`;
           break;
         default:
           projectContent = '<h2>Project Info</h2><p style="margin-top: 2vh;">Select a project to see details.</p>';
