update content box icons

--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,12 @@
     <h3>University of Toronto</h3>
 
     <div class="content-box" style="margin-top: 5vh; width: 100%; height: 6%;">
-      <img src="static/linkedin.png" alt="LinkedIn" style="width: auto; height: 100%;">
+      <img src="static/linkedin.png" alt="LinkedIn" style="width: auto; height: 70%; padding-left: 1vh; padding-right: 1vh;">
       <p><a href="https://www.linkedin.com/in/jamesxdu/" target="_blank">linkedin.com/in/jamesxdu/</a></p>
     </div>
 
     <div class="content-box" style="margin-top: 3vh; width: 100%; height: 6%;">
-      <img src="static/mail.png" alt="Email" style="width: auto; height: 100%;">
+      <img src="static/mail.png" alt="Email" style="width: auto; height: 70%; padding-left: 1vh; padding-right: 1vh;">
       <p><a href="mailto:jay.du@mail.utoronto.ca">jay.du@mail.utoronto.ca</a></p>
     </div>
 
