--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2 style="padding-left: 2vh">Education</h2>
         
         <div class="content-box" style="margin-top: 3vh; width: 100%; height: 35%;">
-          <img src="static/grad.png" alt="Graduate" style="width: auto; height: 38%;">
+          <img src="static/progress.png" alt="Graduate" style="width: auto; height: 38%;">
           <div class="text-box-2" style="width: 100%; height: 100%; padding-left: 1.5vh">
             <h1>MEng Computer Engineering (present)</h1>
             <p>Emphasis in Data Analytics & Machine Learning<br>
@@ -124,21 +124,21 @@
         <div class="text-box-container" style="height: 100%; width: 100%;">
           <div class ="text-box-container-2" style="height: 100%; width: 45%;">
             <div class="content-box" style="width: 100%; height: 50%; margin-top: 2vh;">
-              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <img src="static/violin.png" alt="Interests" style="width:15%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Violin (ARCT in Violin Performance)</p>
             </div>
             <div class="content-box" style="width: 100%; height: 50%;">
-              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
-              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Romantic Era orchestral music</p>
+              <img src="static/music.png" alt="Interests" style="width: 15%; height: auto; margin: 0; padding: 0;">
+              <p style="margin-left: 1vh; padding: 0; line-height: 1;">Romantic era orchestral music</p>
             </div>
           </div>
           <div class ="text-box-container-2" style="height: 100%; width: 45%;">
             <div class="content-box" style="width: 100%; height: 40%; margin-top: 2vh;">
-              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <img src="static/writing.png" alt="Interests" style="width: 15%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">Writing fiction and poetry</p>
             </div>
             <div class="content-box" style="width: 100%; height: 40%;">
-              <img src="static/icontemp.png" alt="Interests" style="width: 7%; height: auto; margin: 0; padding: 0;">
+              <img src="static/bunny.png" alt="Interests" style="width: 15%; height: auto; margin: 0; padding: 0;">
               <p style="margin-left: 1vh; padding: 0; line-height: 1;">My pet bunny!</p>
             </div>
           </div>
