--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="side-box">
-    <img src="static/pfptemp.png" alt="Profile Picture" style="width: 100%; height: auto;">
+    <img src="static/pfp2.jpg" alt="Profile Picture" style="width: 100%; height: auto; border-radius: 2vh;">
     <h1>James Xiao Du</h1>
     <h3>Computer Engineering MEng</h3>
     <h3>University of Toronto</h3>
