--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="side-box">
-    <img src="static/pfptemp.png" alt="Profile Picture" style="width: 100%; height: auto;">
+    <img src="static/pfp2.jpg" alt="Profile Picture" style="width: 100%; height: auto; border-radius: 2vh;">
     <h1>James Xiao Du</h1>
     <h3>Computer Engineering MEng</h3>
     <h3>University of Toronto</h3>
@@ -104,7 +104,7 @@
             customer service professionals. It is a multi-agent system that
             uses natural language processing to generate training scenarios,
             analyze user responses, deliver personalized feedback, and 
-            improve emotional intelligence through dynamic, context-based 
+            improve emotional intelligence through context-based 
             training. CareBrew aims to address the gap in customer service 
             training by providing actionable, industry-specific empathy education.</p>
           `;
@@ -134,8 +134,8 @@
             <p style="margin-top: 2vh;">The Real-Time Conversation Assistant is 
               an Android application that aims to enhance reflective listening 
               skills, a communication technique where the listener 
-              focuses on understanding their conversation partner's messsage and
-              paraphrases their message back to them. The goal of reflective listening
+              focuses on understanding their conversation partner's message and
+              paraphrases it back to them. The goal of reflective listening
               is for the conversation partner to feel heard and understood
               and allow for further expansion of their thoughts.</p>
           `;
